--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1.logo {
   
 nav ul li a {
     text-decoration: none;
-    color: #333;
+    color: #0e0e0e;
     transition: color 0.2s ease-in-out;
 }
   
@@ -49,7 +49,7 @@ nav ul li a:hover {
 } */
 /* General Reset for Images */
 .col-md-8 .me-3{
-    max-width: 100%;
+    max-width: 10%;
     height: auto; /* Maintain aspect ratio */
     object-fit: cover; /* Ensures cropping when necessary */
 }
